créer la vue de recherche de recettes