@@ -2,6 +2,7 @@ package nimnamfood.command.recipe;
 
 import nimnamfood.model.Repositories;
 import nimnamfood.model.recipe.Recipe;
+import nimnamfood.model.recipe.RecipeCreated;
 import nimnamfood.model.recipe.RecipeIngredient;
 import nimnamfood.service.RecipeService;
 import org.springframework.stereotype.Component;
@@ -9,7 +10,6 @@ import vtertre.command.CommandHandler;
 import vtertre.ddd.Tuple;
 import vtertre.ddd.event.DomainEvent;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
@@ -32,7 +32,7 @@ public class CreateRecipeCommandHandler implements CommandHandler<CreateRecipeCo
             this.recipeService.activateIllustration(illustrationId);
         }
 
-        final Recipe recipe = Recipe.factory().create(
+        final Tuple<Recipe, RecipeCreated> tuple = Recipe.factory().create(
                 command.name,
                 illustrationId,
                 command.portionsCount,
@@ -40,7 +40,7 @@ public class CreateRecipeCommandHandler implements CommandHandler<CreateRecipeCo
                 command.instructions,
                 tagIds
         );
-        Repositories.recipes().add(recipe);
-        return Tuple.of(recipe.getId(), Collections.emptyList());
+        Repositories.recipes().add(tuple._1);
+        return tuple.map(((recipe, event) -> Tuple.of(recipe.getId(), List.of(event))));
     }
 }
